test/test_examples/syntactic_examples/syntax_error/error_fun_def_16.zig
// Syntax error: missing comma between parameters

const ifj = @import("ifj24.zig"); 

pub fn foo(param1 : i32 param2 : f64) void {

}  